--- a/cms-frontend/index.html
+++ b/cms-frontend/index.html
@@ -5,6 +5,8 @@
         <title>My Blog</title>
         <link type="text/css" rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
+        <script src="deleteOnePost.js"></script>
+        <script src="editOnePost.js"></script>
         <script src="getAllPosts.js"></script>
     </head>
     <body>
