Change style to journal

--- a/cms-frontend/createNewPost.html
+++ b/cms-frontend/createNewPost.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Have some awesome news for us?</h1>
+    <h1>Something new to tell?</h1>
     <div class="divForm">
         <label for="inputPostTitle">Add a title to your new post:</label>
         <input type="text" id="inputPostTitle" name="inputPostTitle" required>
@@ -27,10 +27,10 @@
     </div>
     
     <div class="divForm">
-        <textarea id="inputPostContent" name="inputPostContent" placeholder="Tell us more about your news!"
+        <textarea id="inputPostContent" name="inputPostContent" placeholder="Tell me more about it!"
             required></textarea>
     </div>
-    <button id="sendNews">Send News</button>
+    <button id="sendNews">Send Post</button>
 </body>
 <script src="createNewPost.js"></script>
 
