--- a/cms-frontend/index.html
+++ b/cms-frontend/index.html
@@ -10,7 +10,13 @@
         <script src="getAllPosts.js"></script>
     </head>
     <body>
-        <h1>NewsBlog</h1>
+        <header>
+            <a>Lifestyle</a>
+            <a>Games</a>
+            <a>Job</a>
+            <a>Books</a>
+        </header>
+        <h1>Welcome to your journal, Cecilia!</h1>
         <div id="posts"></div>
     </body>
 </html>
