--- a/cms-frontend/index.html
+++ b/cms-frontend/index.html
@@ -11,12 +11,12 @@
     </head>
     <body>
         <header>
-            <a>Lifestyle</a>
-            <a>Games</a>
-            <a>Job</a>
-            <a>Books</a>
+            <a>Categories</a>
+            <a>Edit Posts</a>
+            <a href="createNewPost.html">Add New</a>
         </header>
-        <h1>Welcome to your journal, Cecilia!</h1>
-        <div id="posts"></div>
+        <div id="posts">
+            <h1>Welcome to your journal, Cecilia!</h1>
+        </div>
     </body>
 </html>
