Change edit options for categories

--- a/cms-frontend/index.html
+++ b/cms-frontend/index.html
@@ -36,7 +36,11 @@
                 
                 <div class="divForm">
                     <label for="inputPostCategory">Edit Category:</label>
-                    <input type="text" id="editPostCategory" name="inputPostCategory" required>
+                    <select id="editPostCategory" name="inputPostCategory" required>
+                        <option value="Lifestyle">Lifestyle</option>
+                        <option value="Games">Games</option>
+                        <option value="Job">Job</option>
+                    </select>
                 </div>
                 
                 <div class="divForm">
