Fix frontend details

--- a/cms-frontend/createNewPost.html
+++ b/cms-frontend/createNewPost.html
@@ -27,7 +27,11 @@
         
         <div class="divForm">
             <label for="inputPostCategory">Category:</label>
-            <input type="text" id="inputPostCategory" name="inputPostCategory" required>
+            <select id="inputPostCategory" name="inputPostCategory" required>
+                <option value="Lifestyle">Lifestyle</option>
+                <option value="Games">Games</option>
+                <option value="Job">Job</option>
+            </select>
         </div>
         
         <div class="divForm">
