--- a/cms-frontend/index.html
+++ b/cms-frontend/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>My Blog</title>
+        <title>My Journal</title>
         <link type="text/css" rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
     </head>
@@ -23,7 +23,7 @@
                 <a href="index.html">Home</a>
             </div>
             <div id="posts">
-                <h1>Edit here your Post</h1>
+                <h2 class="subtitle">Edit here your Post</h2>
                 <div class="divForm">
                     <label for="inputPostTitle">Edit the title of the post:</label>
                     <input type="text" id="editPostTitle" name="inputPostTitle" required>
@@ -54,6 +54,7 @@
                 <a href="index.html">Home</a>
             </div>
             <div id="postsForCategory">
+                <h2 class="subtitle" id="categoryTitle"></h2>
             </div>
         </div>
     </body>
